--- a/assets/style.css
+++ b/assets/style.css
@@ -2,7 +2,7 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    
 }
 :root {
     --primary-color: #ffffff;
@@ -25,7 +25,6 @@ header {
     z-index: 9999;
     background-color: var(--secondary-color);
     border-bottom: var(--terttiary-color) 2px solid;
-
 }
 
 header nav ul {
@@ -35,14 +34,13 @@ header nav ul {
     align-items: center;
     list-style: none;
     margin: 10px 0;
-    border-bottom: #ffffff;
 }
 
 header nav ul li a {
     color: var(--primary-color);
     text-decoration: none;
     padding: 15px 15px;
-    font-size: 24px;
+    font-size: 18px;
 }
 
 header nav ul li a:hover {
@@ -55,51 +53,113 @@ header nav ul li a:hover {
 .hero {
     background-image: url(./images/portfolio-background.jpg);
     background-size:cover;
-    background-repeat: no-repeat;
-    background-color: rgba(0,0,0,.8);
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
     height: 600px;
     border: var(--terttiary-color) solid 2px;
-   
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    
 }
 
 .hero div {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: center;   
 }
+
 
 .hero p {
-    display: flex;
+    text-align: center;
     color: var(--primary-color);
     font-size: 32px;
-    font-weight:lighter;
-    flex-wrap: wrap;
+    margin: 0 50px;  
 }
-.button {
+
+.view-my-work {
+    align-items: center;
     display: flex;
     justify-content: center;
-    position: absolute;
-    padding: 100px;
+    padding: 28px;
 }
 
-button {
+.btn-1 {
     border: 2px solid var(--terttiary-color);
     font-size: 22px;
-    background-color:rgba(0,0,0,.0);
-    color: var(--primary-color);
+    background-color: var(--secondary-color);
     padding: 8px 8px;
+    color: var(--primary-color);
+    cursor: pointer;
 }
 
-.button a:hover {
-    background-color:var(--secondary-color)!important;
+.btn-1:hover {
+    font-weight: bolder;
+    color: var(--terttiary-color);
 }
 /*--------------------------------------------------------------------*/
 
+main {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
    
+}
+
+
+.main-title {
+    flex-basis: 30rem;
+    margin: 30px 30px;
+}
+
+
+main h2 {
+    padding-bottom: 20px;
+    text-align: center;
+    width: 100%;
+    font-size: 48px; 
+    color: var(--secondary-color);
+    border-bottom: 4px solid;
+  
+}
+
+ 
+   
+    
+
+
+.fact {
+    display: flex;
+    justify-content: space-between;
+}
+
+.fact-img {
+    height: 30%;
+    width: 30%;
+    border: 4px solid var(--secondary-color);
+    border-radius: 50%;
+    background-color: var(--terttiary-color);
+    padding: 18px 18px;
+
+}
+
+.fact-text h3{
+    font-size: 38px;
+    color: var(--secondary-color);
+}
+
+.fact-text p {
+    font-size: 22px;
+    color: var(--secondary-color);
+    
+}
+
+
+.flex-rox {
+    display: flex;
+}
+   
+
+
+ 
 
 
     
