--- a/assets/style.css
+++ b/assets/style.css
@@ -14,33 +14,36 @@ body {
     font-family:'Lucida Sans', 'Lucida Sans Regular', Verdana, sans-serif;
 }
 /*-----------------------------------------------------------------------------------*/
+
+
 header {
-    display: flex;
     justify-content: flex-end;
     flex-wrap: wrap;
-    padding: 30px 40px;
     position: sticky;
     position: -webkit-sticky;
     top: 0;
     z-index: 9999;
     background-color: var(--secondary-color);
     border-bottom: var(--terttiary-color) 2px solid;
+    padding-top: 8px;
 }
 
 header nav ul {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: flex-end;
+    align-content: center;
     list-style: none;
-    margin: 10px 0;
+    margin: 10px 0; 
 }
 
 header nav ul li a {
+    display: flex;
     color: var(--primary-color);
     text-decoration: none;
     padding: 15px 15px;
     font-size: 18px;
+    text-align: center;
 }
 
 header nav ul li a:hover {
@@ -64,7 +67,9 @@ header nav ul li a:hover {
 .hero div {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;   
+    justify-content: center; 
+    flex-direction: column;
+    
 }
 
 
@@ -77,10 +82,9 @@ header nav ul li a:hover {
 
 .view-my-work {
     align-items: center;
-    display: flex;
-    justify-content: center;
     padding: 28px;
-}
+    flex: content;
+}                 
 
 .btn-1 {
     border: 2px solid var(--terttiary-color);
@@ -101,61 +105,66 @@ main {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-   
-}
-
-
-.main-title {
-    flex-basis: 30rem;
-    margin: 30px 30px;
-}
-
-
-main h2 {
-    padding-bottom: 20px;
-    text-align: center;
-    width: 100%;
-    font-size: 48px; 
-    color: var(--secondary-color);
-    border-bottom: 4px solid;
-  
-}
-
- 
-   
+    flex-wrap: wrap;
+    margin: 48px 48px;
     
-
-
+    
+}
+  
+.main-title {
+    text-align: center;
+    font-size: 38px;
+    width: 600px;
+    margin: 48px 30px;
+    padding: 28px 38px 18px;
+    color: var(--secondary-color);
+    border-bottom: 3px solid var(--secondary-color);
+}
+    
 .fact {
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap; 
 }
 
+.fact-info {
+    /* justify-content: center;
+    align-items: center;
+    align-content: center;*/
+    flex: 1 49%;
+    border: 1px solid red;  
+}
+
+
 .fact-img {
-    height: 30%;
-    width: 30%;
+    margin: auto;
+    height: 80px;
+    width: 80px;
     border: 4px solid var(--secondary-color);
     border-radius: 50%;
     background-color: var(--terttiary-color);
-    padding: 18px 18px;
-
+    padding: 18px 18px; 
+    border: 1px solid purple;   
 }
 
 .fact-text h3{
-    font-size: 38px;
+
+    width: 100%;
+    text-align: center;
+    font-size: 36px;
     color: var(--secondary-color);
+    border: 1px solid blue;
+   
 }
 
 .fact-text p {
+    width: 100%;
+    text-align: center;
     font-size: 22px;
-    color: var(--secondary-color);
-    
-}
+    color: var(--secondary-color); 
+    border: 1px solid orange;
+}   
 
 
-.flex-rox {
-    display: flex;
-}
    
 
 
