--- a/assets/style.css
+++ b/assets/style.css
@@ -113,8 +113,8 @@ main {
     align-content: center;
     font-size: 38px;
     width: 600px;
-    margin: 48px 30px;
-    padding: 28px 38px 18px;
+    margin: 12px 30px;
+    padding: 12px 38px 18px;
     color: var(--secondary-color);
     border-bottom: 3px solid var(--secondary-color);
 }
@@ -158,15 +158,13 @@ main {
 }   
 /*-----------------------------------------------------------------*/
 
-
 .portfolio {
-    border: 2px solid red;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     background-color: var(--secondary-color);
-    padding: 28px 15%;
+    padding: 28px 16%;
    
 }
 
@@ -182,11 +180,116 @@ main {
 
 .work-history {
     padding: 12px 12px;
-    border: 2px solid var(--terttiary-color);
-    margin: 12px 18px;
+    border: 2px solid silver;
+    margin: 24px 38px;
 }
 /*---------------------------------------------------------------------*/
 
+.contact-form {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin: 0 88px;
+    padding: 24px 160px;
+}
+
+.contact-form h3 {
+    border-bottom: 3px solid var(--secondary-color);
+    color: var(--secondary-color);
+    text-align: center;
+    font-size: 34px;
+    margin: 18px 16%;
+    padding: 14px 20px;
+}
+
+.contact-form address {
+    text-align: center;
+    font-size: 16px;
+    font-weight: bolder;
+    padding-top: 24px;
+}
+
+form {
+    margin: 10%;
+    padding: 24px 100px;
+    display: flex;
+    flex-direction: column;
+    background-color: var(--secondary-color);
+}
+
+input {
+    background-color: lightgray;
+    padding: 1em;
+    border-radius: 10px;
+    border: 2px solid transparent;
+    outline: none;
+    margin: 3px 0;
+}
+
+input::placeholder {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', Verdana, sans-serif; 
+    color: var(--secondary-color);
+    font-size: 16px;   
+}
+
+.text-area {
+    background-color: lightgray;
+    padding: 2em;
+    border-radius: 10px;
+    border: 2px solid transparent;
+    outline: none;
+    margin: 3px 0;
+}
+.text-area::placeholder {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', Verdana, sans-serif; 
+    color: var(--secondary-color);
+    font-size: 16px;
+}
+
+.contact-form button {
+    border: 2px solid var(--terttiary-color);
+    font-size: 22px;
+    background-color: var(--secondary-color);
+    padding: 8px 8px;
+    color: var(--primary-color);
+    cursor: pointer; 
+    margin: 18px;   
+}
+.contact-form button:hover {
+    color: var(--terttiary-color);
+}
+
+footer { 
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    align-items: center;
+    height: 100px;
+    background-color: var(--terttiary-color);
+}
+
+footer h4 {
+    font-size: 28px;
+    color: var(--secondary-color);
+    margin: 0 44px;
+}
+
+/*media query for smaller desktop screen and smaller*/
+@media screen and (max-width: 980px) {
+ 
+
+}
+/*media query for tablets and smaller*/
+@media screen and (max-width:768px) {
+
+}
+
+/*media query for mobile phones and smaller*/
+@media  screen and (max-width: 575px) {
+    
+
+}
 
    
 
