--- a/assets/style.css
+++ b/assets/style.css
@@ -111,10 +111,10 @@ main {
 .main-title {
     text-align: center;
     align-content: center;
-    font-size: 38px;
-    width: 600px;
+    font-size: 36px;
+    width: 344px;
     margin: 12px 30px;
-    padding: 12px 38px 18px;
+    padding: 24px 0;
     color: var(--secondary-color);
     border-bottom: 3px solid var(--secondary-color);
 }
@@ -178,11 +178,16 @@ main {
     border-bottom: 3px solid;
 }
 
-.work-history {
+article {
     padding: 12px 12px;
-    border: 2px solid silver;
     margin: 24px 38px;
 }
+
+iframe {
+    padding: 8px;
+    border: 3px solid silver;
+}
+
 /*---------------------------------------------------------------------*/
 
 .contact-form {
@@ -190,8 +195,7 @@ main {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    margin: 0 88px;
-    padding: 24px 160px;
+    margin: auto;
 }
 
 .contact-form h3 {
@@ -270,9 +274,9 @@ footer {
 }
 
 footer h4 {
-    font-size: 28px;
+    font-size: 22px;
     color: var(--secondary-color);
-    margin: 0 44px;
+    margin: 0 18px 0;
 }
 
 /*media query for smaller desktop screen and smaller*/
