--- a/assets/style.css
+++ b/assets/style.css
@@ -17,8 +17,7 @@ body {
 
 
 header {
-    justify-content: flex-end;
-    flex-wrap: wrap;
+    height: 80px;
     position: sticky;
     position: -webkit-sticky;
     top: 0;
@@ -26,19 +25,20 @@ header {
     background-color: var(--secondary-color);
     border-bottom: var(--terttiary-color) 2px solid;
     padding-top: 8px;
+   
 }
 
 header nav ul {
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-end;
-    align-content: center;
+    align-items: center;
     list-style: none;
     margin: 10px 0; 
+    padding: 10px 0;
 }
 
 header nav ul li a {
-    display: flex;
     color: var(--primary-color);
     text-decoration: none;
     padding: 15px 15px;
@@ -70,6 +70,7 @@ header nav ul li a:hover {
     justify-content: center; 
     flex-direction: column;
     
+    
 }
 
 
@@ -77,7 +78,7 @@ header nav ul li a:hover {
     text-align: center;
     color: var(--primary-color);
     font-size: 32px;
-    margin: 0 50px;  
+    margin: 0 24px; 
 }
 
 .view-my-work {
@@ -121,7 +122,9 @@ main {
 
 .fact {
     display: flex;
-    flex-wrap: wrap;   
+    flex-wrap: wrap; 
+    justify-content: center; 
+    margin: 0 50px; 
 }
 
 .fact-info {
@@ -138,6 +141,18 @@ main {
     border-radius: 50%;
     background-color: var(--terttiary-color);
     padding: 18px 18px;       
+}
+
+ .profile-pic {
+    height: 200px;
+    width: 200px;
+    border: 2px solid var(--terttiary-color);
+    border-radius: 50%;
+    
+}
+
+.profile-pic-placement {
+    margin: 0 0 -136px;
 }
 
 .fact-text h3 {
@@ -172,6 +187,7 @@ main {
     color: var(--primary-color);
     border-bottom: 3px solid var(--primary-color);
     padding: 80px 59px 27px;
+    margin-top: 40px;
     
 }
 
@@ -312,7 +328,9 @@ footer h4 {
 
 /*media query for mobile phones and smaller*/
 @media  screen and (max-width: 575px) {
-    
+    header nav ul {
+        margin: 10px 46px;
+    }
 
 }
 
