--- a/assets/style.css
+++ b/assets/style.css
@@ -106,15 +106,13 @@ main {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin: 38px 38px;   
+    padding: 0 90px;  
 }
   
 .main-title {
     text-align: center;
-    align-content: center;
     font-size: 36px;
     width: 344px;
-    margin: 12px 30px;
     padding: 24px 0;
     color: var(--secondary-color);
     border-bottom: 3px solid var(--secondary-color);
@@ -141,18 +139,6 @@ main {
     border-radius: 50%;
     background-color: var(--terttiary-color);
     padding: 18px 18px;       
-}
-
- .profile-pic {
-    height: 200px;
-    width: 200px;
-    border: 2px solid var(--terttiary-color);
-    border-radius: 50%;
-    
-}
-
-.profile-pic-placement {
-    margin: 0 0 -136px;
 }
 
 .fact-text h3 {
@@ -235,25 +221,31 @@ article button:hover {
     margin: auto;
 }
 
-.contact-form h3 {
-    border-bottom: 3px solid var(--secondary-color);
+.section-image {
     color: var(--secondary-color);
     text-align: center;
-    font-size: 34px;
-    margin: 18px 16%;
-    padding: 14px 20px;
+    padding-right: 40px;
+    
 }
 
-.contact-form address {
-    text-align: center;
-    font-size: 16px;
-    font-weight: bolder;
-    padding-top: 24px;
+.section-image h3{
+    font-size: 34px;
+    border-bottom: 3px solid var(--secondary-color);
+    padding: 17px 0px;
+    margin: 10px 65px;
+   
+}
+.profile-pic {
+    height: 200px;
+    width: 200px;
+    border: 2px solid var(--terttiary-color);
+    border-radius: 50%;
+    margin: 24px;
+    
 }
 
 form {
-    margin: 10%;
-    padding: 24px 100px;
+    padding: 26px 85px;
     display: flex;
     flex-direction: column;
     background-color: var(--secondary-color);
@@ -300,6 +292,7 @@ input::placeholder {
 .contact-form button:hover {
     color: var(--terttiary-color);
 }
+   
 /*------------------------------------------------------------------------------------*/
 footer { 
     display: flex;
@@ -323,13 +316,28 @@ footer h4 {
 }
 /*media query for tablets and smaller*/
 @media screen and (max-width:768px) {
-
+    main {
+        padding: 0 146px;
+    }
 }
 
 /*media query for mobile phones and smaller*/
 @media  screen and (max-width: 575px) {
+
+    .hero {
+        height: 450px;
+        padding: 0 54px;
+    }
     header nav ul {
-        margin: 10px 46px;
+        padding: 9px 60px;
+    }
+
+    .section-image {
+        padding: 0;
+    }
+
+    .section-title {
+        padding: 34px 0 16px
     }
 
 }
