--- a/assets/style.css
+++ b/assets/style.css
@@ -106,14 +106,14 @@ main {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    padding: 0 90px;  
+    padding: 0 90px 72px;  
 }
   
 .main-title {
     text-align: center;
-    font-size: 36px;
+    font-size: 31px;
     width: 344px;
-    padding: 24px 0;
+    padding: 60px 0 8px;
     color: var(--secondary-color);
     border-bottom: 3px solid var(--secondary-color);
 }
@@ -122,7 +122,7 @@ main {
     display: flex;
     flex-wrap: wrap; 
     justify-content: center; 
-    margin: 0 50px; 
+    padding: 40px 92px 0; 
 }
 
 .fact-info {
@@ -143,18 +143,17 @@ main {
 
 .fact-text h3 {
     width: auto;
-    font-size: 36px;
+    font-size: 32px;
     color: var(--secondary-color);
     text-align: center; 
-    margin: 12px 20px;
+    margin: 18px 0 0;
 }
 
 .fact-text p {
-    width: 100%;
     text-align: center;
-    font-size: 22px;
+    font-size: 18px;
     color: var(--secondary-color); 
-    padding: 18px 0;
+    padding: 12px 0;
 
 }   
 /*-----------------------------------------------------------------*/
