--- a/assets/style.css
+++ b/assets/style.css
@@ -52,14 +52,30 @@ header ul li a:hover {
 .git {
     height: 40px;
     margin: 20px;
-  
-    
+    background-color: var(--primary-color);
+    border-radius: 50px;
+    border: 1px solid var(--primary-color) ;   
+}
+
+.git:hover {
+    background-color: var(--terttiary-color);
+    border-radius: 50px;
+    border: 1px solid var(--terttiary-color) ; 
 }
 
 .linkedin {
     height: 40px;
     margin: 20px;
+    background-color:var(--primary-color);
+    border-radius: 50px;
+    border: 1px solid var(--primary-color) ;
 }
+
+.linkedin:hover {
+    background-color: var(--terttiary-color);
+    border-radius: 50px;
+    border: 1px solid var(--terttiary-color) ; 
+}    
 
 
 .navbar-toggler {
@@ -91,13 +107,14 @@ header ul li a:hover {
     position: absolute;
     height: 3px;
     width: 100%;
-    background: var(--terttiary-color);
+    background: var(--primary-color);
     border-radius: 1;
     opacity: 1;
     left: 0;
     transform: rotate(0deg);
     transition: .25s ease-in-out;
 }
+
 
 .middle-bar {
     margin-top: 0px;
